# ChangeLog for perl-core/Archive-Tar
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/perl-core/Archive-Tar/ChangeLog,v 1.3 2008/12/10 17:15:53 aballier Exp $

  10 Dec 2008; Alexis Ballier <aballier@gentoo.org> Archive-Tar-1.40.ebuild:
  keyword ~sparc-fbsd

  04 Nov 2008; Mike Frysinger <vapier@gentoo.org> Archive-Tar-1.40.ebuild:
  Add arm/s390/sh love.

  01 Nov 2008; Torsten Veller <tove@gentoo.org> +metadata.xml,
  +Archive-Tar-1.32.ebuild, +Archive-Tar-1.38.ebuild,
  +Archive-Tar-1.40.ebuild:
  dev-perl => perl-core migration

  01 Nov 2008; Torsten Veller <tove@gentoo.org> Archive-Tar-1.32.ebuild,
  Archive-Tar-1.38.ebuild, Archive-Tar-1.40.ebuild:
  New virtuals: Compress-Zlib IO-Zlib

  27 Oct 2008; Alexis Ballier <aballier@gentoo.org> Archive-Tar-1.40.ebuild:
  keyword ~x86-fbsd, bug #192989

  23 Oct 2008; Tobias Scherbaum <dertobi123@gentoo.org>
  Archive-Tar-1.40.ebuild:
  ppc stable, bug #192989

  23 Oct 2008; Raúl Porcel <armin76@gentoo.org> Archive-Tar-1.40.ebuild:
  alpha/ia64/x86 stable wrt #192989

  22 Oct 2008; Guy Martin <gmsoft@gentoo.org> Archive-Tar-1.40.ebuild:
  hppa stable, #192989

  21 Oct 2008; Markus Rothe <corsair@gentoo.org> Archive-Tar-1.40.ebuild:
  Stable on ppc64; bug #192989

  21 Oct 2008; Tobias Heinlein <keytoaster@gentoo.org>
  Archive-Tar-1.40.ebuild:
  Keyworded and stable for amd64, security bug #192989

  20 Oct 2008; Friedrich Oslage <bluebird@gentoo.org>
  Archive-Tar-1.40.ebuild:
  Keyworded and stable for sparc, security bug #192989

*Archive-Tar-1.40 (20 Oct 2008)

  20 Oct 2008; Torsten Veller <tove@gentoo.org> +Archive-Tar-1.40.ebuild:
  Version bump. Fixes #192989

  20 Sep 2008; Santiago M. Mola <coldwind@gentoo.org>
  Archive-Tar-1.38.ebuild:
  amd64 stable

  15 Sep 2008; Torsten Veller <tove@gentoo.org> -Archive-Tar-1.28.ebuild,
  -Archive-Tar-1.29.ebuild, -Archive-Tar-1.30.ebuild,
  -Archive-Tar-1.31.ebuild:
  Cleanup
