@@ -4,15 +4,17 @@ Hash: SHA1
 DIST Archive-Tar-1.32.tar.gz 39522 RMD160 698432a64b5939b40d1c0bef0cab46ddb9217051 SHA1 1e2ce5418b9bbff79836fce79f2fd00081175023 SHA256 2b154f4b1b7eba5ee8ab22fd9b768a51672ad7875a597c57e7e51432b56d9a0c
 DIST Archive-Tar-1.38.tar.gz 42452 RMD160 908cf29622038cc526bcca98a65523e4cb445b8c SHA1 f52b4928b839d0bb8f77e507a59ff46af816737e SHA256 d10008979ea02b1fd1f34c939ecc9b23a200eba9b20a405119dd6e986a6543dd
 DIST Archive-Tar-1.40.tar.gz 48243 RMD160 19650609dfe77596f7f5192ff59785e8a54b6ad7 SHA1 8161961fe2cb9b215f8fca3470dc618b302b50c8 SHA256 7d6b285b7ea5c55042eca05e2a357d6449c44c2b940ea4bacbcbf1c1e1bb0c4e
+DIST Archive-Tar-1.42.tar.gz 48865 RMD160 5b2f54ee43c0f07bfa040d339ecc72a4409edd5f SHA1 a733c8ce1fd75bce1653c7eb4c3072bf966553f5 SHA256 f03405d7e5d72594e90d760276cd96255a5b89ee66a9750b4141ac5f8002f1b2
 EBUILD Archive-Tar-1.32.ebuild 643 RMD160 41e89ec1c83ecc4b416910178b2d167a0e8d6579 SHA1 d3af34534f12eaa52120fcc42edbb7622d57727d SHA256 114dcd55a22bea7f14a4839e5945c5b0cf00c5417ed8f764448b82894fd48813
 EBUILD Archive-Tar-1.38.ebuild 648 RMD160 315d0d88c8105bf96052c47222d403d4890be115 SHA1 d79cf9a7bba125ea9854e35a7740d105412ba35a SHA256 78343c9eb9eae3c2925e2a0426e2f1aa9a223fb935f73e85f8958c5bd2739e1d
 EBUILD Archive-Tar-1.40.ebuild 714 RMD160 80b57006bf82fc186e3b1e94c26342b35e7144f0 SHA1 add34a023a0505ab2d556ff4e07e1161fa3cba76 SHA256 ee563cd7f8d8c7f1ba6cd9ed4204475e42900e59b5d41dbe8015b286db815d20
-MISC ChangeLog 12634 RMD160 4895f794d475bca23d0d98ba015f819392ceca9b SHA1 a6de7271aa7677356d7768674602889e68e30ca7 SHA256 aeb81795d7dd23a2461099d50d5409239ccdd6357b3934f69191a087271d9c4e
+EBUILD Archive-Tar-1.42.ebuild 722 RMD160 2d417d53cdacd4c3a65379164266d4e36ecceb1a SHA1 05ca02aef2017ce4b3b6f086dc9fd6d5b19237d6 SHA256 3c5bae2ce2d747248eb5ed28f1ba2db9ed974b78bb1f09237fb8c876f5cce98a
+MISC ChangeLog 12753 RMD160 0c422054265d6493a5e8fc6accd1a7768e8691a1 SHA1 0bc778dd1cc8e282172ea8f11fec5ba77bffc7b7 SHA256 b369fcf2de93e1f3bc5493b7b2763e6d9c12fe2b75db7ed0974150befde6ea32
 MISC metadata.xml 158 RMD160 03e4d8164c58bc61660cbaf489d4e3652de0feb7 SHA1 9a84117c6fb70288426e20c84deaf16f4381a549 SHA256 1fef4c0af5f71b777110f54d9dfbd27d6c85c750fca007f4a2fb38345ebbb710
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkk/+U8ACgkQvFcC4BYPU0qSsACfQvOv8aaR4a4esi3Mz0QPd9qW
-LOwAnAiDYQI+wb5rana2XioOT1/F286a
-=Qsjq
+iEYEARECAAYFAklGbKQACgkQV3J2n04EauxOyACgjC1Fx0Bo2uO0WbuSR4L61ZK3
+qykAnA8h2ATzv6U6VbySVXjSPyPqblS6
+=3Clh
 -----END PGP SIGNATURE-----
