@@ -1,6 +1,11 @@
 # ChangeLog for perl-core/Archive-Tar
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/perl-core/Archive-Tar/ChangeLog,v 1.3 2008/12/10 17:15:53 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/perl-core/Archive-Tar/ChangeLog,v 1.4 2008/12/15 14:41:59 tove Exp $
+
+*Archive-Tar-1.42 (15 Dec 2008)
+
+  15 Dec 2008; Torsten Veller <tove@gentoo.org> +Archive-Tar-1.42.ebuild:
+  Version bump
 
   10 Dec 2008; Alexis Ballier <aballier@gentoo.org> Archive-Tar-1.40.ebuild:
   keyword ~sparc-fbsd
